[metadata]
name = ToxicFilter
version = 0.0.1
author = Samuel Breuer
author_email = swbreuer@mtu.edu
description = A toxic filter used 
long_description = file: README.md
long_description_content_type = text/markdown
url = TBD
project_urls =
    Bug Tracker = TBD
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
