[metadata]
name = ToxicFilter
version = 0.1.0
author = Samuel Breuer
author_email = swbreuer@mtu.edu
description = A toxic filter used to analyse Mass Spectroscopy output on potentially toxic chemicals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swbreuer/ToxicFilter
project_urls =
    Bug Tracker = https://github.com/swbreuer/ToxicFilter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
