[metadata]
name = ToxAssign
version = 0.2.0
author = Samuel Breuer
author_email = swbreuer@mtu.edu
description = A toxic assigner used to classify potentially toxic chemicals from a list of formulas of compounds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swbreuer/ToxAssign
project_urls =
    Bug Tracker = https://github.com/swbreuer/ToxAssign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ToxAssign


